fixed board files and create board dock
