# docs/swagger.json
@@ -25,6 +25,14 @@
     {
       "name": "User",
       "description": "User's operation."
+    },
+    {
+      "name": "Support",
+      "description": "Support operation."
+    },
+    {
+      "name": "Boards",
+      "description": "Board operation"
     }
   ],
   "paths": {
@@ -679,6 +687,74 @@
                 }
               }
             }
+          }
+        }
+      }
+    },
+    "/boards": {
+      "post": {
+        "tags": [
+          "Boards"
+        ],
+        "summary": "Create board",
+        "operationId": "createBoard",
+        "description": "Create a board with user id",
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "required": [
+                  "title"
+                ],
+                "properties": {
+                  "title": {
+                    "description": "Board's name",
+                    "type": "string",
+                    "example": "Project 1"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "201": {
+            "description": "Creates a new board",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "required": [
+                    "status",
+                    "message",
+                    "data"
+                  ],
+                  "properties": {
+                    "status": {
+                      "type": "integer",
+                      "example": 201
+                    },
+                    "message": {
+                      "type": "string",
+                      "example": "Successfully created a board!"
+                    },
+                    "data": {
+                      "type": "object",
+                      "$ref": "#/components/schemas/boardSchema"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "401": {
+            "$ref": "#/components/responses/401"
           }
         }
       }
