# src/routers/boards.js
@@ -1,5 +1,3 @@
-// src/routers/boards.js
-
 import { Router } from 'express';
 
 import {
@@ -13,13 +11,12 @@ import { ctrlWrapper } from '../utils/ctrlWrapper.js';
 import { validateBody } from '../middlewares/validateBody.js';
 import { isValidId } from '../middlewares/boards/isValidId.js';
 import { authenticate } from '../middlewares/authenticate.js';
-import { upload } from '../middlewares/multer.js';
 
 import { createBoardSchema, updateBoardSchema } from '../validations/boards.js';
 
 const boardsRouter = Router();
 
-boardsRouter.use('/',authenticate); // аутентифікація user і  запис user в  req.user через middleware
+boardsRouter.use('/',authenticate);
 
 boardsRouter.post(
   '/',
